--- a/weixinsite/css/base.less
+++ b/weixinsite/css/base.less
@@ -152,6 +152,7 @@ a{color: #565656;}
 .mb0{margin-bottom: 0!important;}
 .mb1{margin-bottom: 1rem!important;}
 .mb2{margin-bottom: 2rem!important;}
+.pl2{padding-left: 2rem!important;}
 .color-f66900{color: @orange!important;}
 .width100{width: 100%!important;}
 .width98{width: 98%!important;}
@@ -166,9 +167,9 @@ nav{height: 5rem; line-height: 5rem; background-color: @headbg; text-align: cent
   font-weight: bold!important;
   height: 5rem!important;
   line-height: 5rem!important;
-  width: 10rem!important;
+  width: 5rem!important;
   position: absolute;
-  color: @white;
+  color: #848889;
   background-color: @headbg;
   left: 0;
 }
@@ -271,10 +272,12 @@ nav{height: 5rem; line-height: 5rem; background-color: @headbg; text-align: cent
   cursor: pointer;
   min-width: 7rem;
   background-color: @green;
+  border: 0.1rem solid @green;
   color: @white;
   border-radius: @radius;
   &:active{
     background-color: @green - #333;
+    border: 0.1rem solid @green - #333;
   }
 }
 .m-button-empty{
