--- a/weixinsite/css/m-cart.css
+++ b/weixinsite/css/m-cart.css
@@ -44,7 +44,7 @@
   width: 6rem;
   border-left: 0.1rem solid #ebebeb;
   height: 100%;
-  line-height: 6rem;
+  line-height: 7rem;
   text-align: center;
   position: absolute;
   right: 0;
@@ -52,7 +52,7 @@
 }
 .m-choose-detail {
   width: 22rem;
-  padding-left: 2rem;
+  padding-left: 4rem;
   float: left;
 }
 .m-choose-title {
@@ -60,6 +60,8 @@
 }
 .m-choose-brief-detail {
   font-size: 1rem;
+  line-height: 1.6rem;
+  margin-top: 0.3rem;
   color: #858688;
 }
 .icon-angle-right-appearance {
@@ -102,14 +104,13 @@
 .m-modify-name {
   float: left;
   font-size: 1.4rem;
-  width: 5rem;
+  width: 6rem;
   text-align: right;
-  padding-right: 1rem;
   color: #565656;
   font-weight: bold;
 }
 .m-modify-input-wrap {
-  margin-left: 6rem;
+  margin-left: 7rem;
 }
 .m-modify-input {
   float: left;
@@ -143,16 +144,13 @@
 }
 .m-order-detail-content {
   background-color: #ffffff;
-  box-shadow: 0px 1px 1px #d0d0d0;
+  border-bottom: 0.1rem solid #ebebeb;
   margin-top: 0!important;
   height: 29rem;
-  border-bottom-left-radius: 0.416666rem;
-  border-bottom-right-radius: 0.416666rem;
 }
 .m-online-detail-content-new {
   padding-bottom: 0;
   height: auto;
-  border-radius: 0.416666rem;
 }
 .m-order-detail-partOne {
   color: #565656;
@@ -373,21 +371,20 @@
 .m-center-partOne ul {
   color: #565656;
   background-color: #ffffff;
-  border-radius: 0.416666rem;
-  border-bottom: 0.1rem solid #ebebeb;
 }
 .m-center-partOne ul li {
   display: inline-block;
   width: 100%;
-  height: 4rem;
-  line-height: 4rem;
+  height: 5rem;
+  line-height: 5rem;
   position: relative;
   border-bottom: 0.1rem solid #ebebeb;
 }
 .m-center-partOne ul li > div:last-child {
   position: absolute;
   right: 1rem;
-  top: 1.2rem;
+  top: 50%;
+  margin-top: -1rem;
   font-size: 2rem;
   color: #e4e4e4;
 }
@@ -451,4 +448,7 @@
 }
 .right-bottom .m-button:first-child {
   margin-right: 0.6rem;
+}
+.order-content {
+  margin-bottom: 3rem;
 }
