--- a/weixinsite/css/m-cart.less
+++ b/weixinsite/css/m-cart.less
@@ -46,7 +46,7 @@
   width: 6rem;
   border-left: 0.1rem solid #ebebeb;
   height: 100%;
-  line-height: 6rem;
+  line-height: 7rem;
   text-align: center;
   position: absolute;
   right: 0;
@@ -54,7 +54,7 @@
 }
 .m-choose-detail{
   width: 22rem;
-  padding-left: 2rem;
+  padding-left: 4rem;
   float: left;
 }
 .m-choose-title{
@@ -62,6 +62,8 @@
 }
 .m-choose-brief-detail{
   font-size: 1rem;
+  line-height: 1.6rem;
+  margin-top: 0.3rem;
   color: #858688;
 }
 .icon-angle-right-appearance{
@@ -104,14 +106,13 @@
 .m-modify-name{
   float: left;
   font-size: 1.4rem;
-  width: 5rem;
+  width: 6rem;
   text-align: right;
-  padding-right: 1rem;
   color: #565656;
   font-weight: bold;
 }
 .m-modify-input-wrap{
-  margin-left: 6rem;
+  margin-left: 7rem;
 }
 .m-modify-input{
   float: left;
@@ -146,16 +147,13 @@
 }
 .m-order-detail-content{
   background-color: @white;
-  box-shadow: 0px 1px 1px #d0d0d0;
+  border-bottom: 0.1rem solid @ebebeb;
   margin-top: 0!important;
   height: 29rem;
-  border-bottom-left-radius: @radius;
-  border-bottom-right-radius: @radius;
 }
 .m-online-detail-content-new{
   padding-bottom: 0;
   height: auto;
-  border-radius: @radius;
 }
 .m-order-detail-partOne{
   color: #565656;
@@ -389,20 +387,19 @@
   ul{
     color: #565656;
     background-color: @white;
-    border-radius: 0.416666rem;
-    border-bottom: 0.1rem solid @ebebeb;
     li{
       display: inline-block;
       width: 100%;
-      height: 4rem;
-      line-height: 4rem;
+      height: 5rem;
+      line-height: 5rem;
       position: relative;
       border-bottom: 0.1rem solid @ebebeb;
       >div{
         &:last-child{
           position: absolute;
           right: 1rem;
-          top: 1.2rem;
+          top: 50%;
+          margin-top: -1rem;
           font-size: 2rem;
           color: #e4e4e4;
         }
@@ -471,4 +468,7 @@
   .m-button:first-child{
     margin-right: 0.6rem;
   }
+}
+.order-content{
+  margin-bottom: 3rem;
 }
