--- a/weixinsite/css/m-cart.less
+++ b/weixinsite/css/m-cart.less
@@ -486,3 +486,61 @@
 .tab-container .panel-container { background: #fff; }
 .panel-container { margin-bottom: 1rem; min-height: 20rem}
 .panel-container img{display: block!important;}
+/*微信分享*/
+#weixin-guide{
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/guide.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  z-index: 9999;
+}
+.share-cover{
+  position: fixed;
+  display: none;
+  z-index: 9999;
+  background: rgba(0,0,0,0.7) ;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.share-button{
+  .title{
+    font-size: 2rem;
+    line-height: 2rem;
+    margin-top: 3rem;
+    text-align: center;
+  }
+  .button{
+    margin-top: 1rem;
+    text-align: center;
+  }
+}
+.product-button{
+  width: 6rem!important;
+  min-width: 5rem;
+  font-size: 1rem!important;
+}
+.purchase-button{
+  margin-top: 3rem;
+  padding-top: 1rem;
+  border-top: 0.1rem solid @ebebeb;
+  .link{
+    font-size: 3rem;
+    text-align: center;
+    vertical-align: middle;
+    width: 3rem;
+    display: inline-block;
+  }
+}
+.show-price{
+  text-align: center;
+  margin-top: 1rem;
+  label{
+    input{
+      vertical-align: middle;
+    }
+  }
+}
