--- a/weixinsite/css/home.less
+++ b/weixinsite/css/home.less
@@ -187,3 +187,27 @@
     }
   }
 }
+.news-detail{
+  .data{
+    font-size: 1.2rem;
+  }
+  .title{
+    font-size: 2rem;
+    margin: 1rem auto 1rem auto;
+  }
+  .news-content{
+    p{
+      line-height: 2rem;
+      text-indent: 2em;
+    }
+    img{
+      margin: 1.5rem auto 1rem auto;
+      display: block;
+    }
+    .img-detail{
+      text-align: center;
+      font-size: 1rem;
+      color: @fontGrey;
+    }
+  }
+}
