--- a/weixinsite/css/idangerous.swiper.css
+++ b/weixinsite/css/idangerous.swiper.css
@@ -75,7 +75,7 @@
 .swiper-container, .swiper-slide {
 	width: 100%;
     overflow: hidden;
-    height: 24rem;
+    height: 25rem!important;
 }
 .swiper-container, .swiper-slide img{
     width: 100%;
@@ -115,7 +115,7 @@
     left: 0;
     z-index: 20;
     right: 0;
-    bottom: 0.5rem
+    bottom: 1.5rem
 }
 .pagination2 .swiper-pagination-switch {
     display: inline-block;
