--- a/weixinApp/present/css/variables.less
+++ b/weixinApp/present/css/variables.less
@@ -7,9 +7,11 @@
 @headbg: #20282b;
 @green: #45bf14;
 @fontColor: #333;
-@bgColor: #f3f3f3;
+@bgColor: #fff;
 @cccGrey: #ccc;
 @fontGrey: #999;
+@buttonColor: @red;
+@buttonTwoColor: #c69c6c;
 @fontGreyDeep: #7f7f7f;
 
 /*尺寸*/
