--- a/weixinApp/present/css/base.less
+++ b/weixinApp/present/css/base.less
@@ -145,6 +145,7 @@ a{color: #565656;}
 .mt0{margin-top: 0!important;}
 .mt1{margin-top:1rem!important; }
 .mt3{margin-top:3rem!important;}
+.mt4-5{margin-top:4.5rem!important;}
 .ml1{margin-left: 1rem!important;}
 .ml1-8{margin-left: 1.8rem!important;}
 .mb0-6{margin-bottom: 0.6rem!important;}
@@ -271,13 +272,28 @@ nav{height: 5rem; line-height: 5rem; background-color: @headbg; text-align: cent
   text-align: center;
   cursor: pointer;
   min-width: 7rem;
-  background-color: @green;
-  border: 0.1rem solid @green;
+  background-color: @buttonColor;
+  border: 0.1rem solid @buttonColor;
   color: @white;
   border-radius: @radius;
   &:active{
-    background-color: @green - #333;
-    border: 0.1rem solid @green - #333;
+    background-color: @buttonColor - #333;
+    border: 0.1rem solid @buttonColor - #333;
+  }
+}
+.m-button-two{
+  display: inline-block;
+  height: 4rem;
+  text-align: center;
+  cursor: pointer;
+  min-width: 7rem;
+  background-color: @buttonTwoColor;
+  border: 0.1rem solid @buttonTwoColor;
+  color: @white;
+  border-radius: @radius;
+  &:active{
+    background-color: @buttonTwoColor - #333;
+    border: 0.1rem solid @buttonTwoColor - #333;
   }
 }
 .m-button-empty{
@@ -291,15 +307,12 @@ nav{height: 5rem; line-height: 5rem; background-color: @headbg; text-align: cent
   border:0.1rem solid @ebebeb;
   color: @fontColor;
   &:active{
-    background-color: @green;
+    background-color: @buttonColor;
     color: @white;
   }
 }
 .m-button-content{
   line-height: 4rem;
-}
-.m-button-disable{
-  color: @cccGrey;
 }
 .bg-gradients-bottom{
   background: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(@black));
@@ -313,6 +326,8 @@ nav{height: 5rem; line-height: 5rem; background-color: @headbg; text-align: cent
 .m-underline-ebebeb{
   border-bottom: 0.1rem solid @ebebeb;
 }
+
+/* form表单*/
 .m-input{
   height: 2rem;
   background-color: transparent;
@@ -321,7 +336,7 @@ nav{height: 5rem; line-height: 5rem; background-color: @headbg; text-align: cent
   border-radius: 0.416666rem;
   padding-top:0.6rem;
   padding-bottom:0.6rem;
-  width:100%
+  width: 100%;
 }
 .m-input-fcode{
   height: 2rem;
@@ -335,6 +350,26 @@ nav{height: 5rem; line-height: 5rem; background-color: @headbg; text-align: cent
 }
 .m-input-border{
   border:0.1rem solid @ebebeb;
+}
+.input-div{
+  background: @white;
+  height: 4.5rem;
+  border-radius: @radius;
+  border: 0.1rem solid @cccGrey;
+  line-height: 4.5rem;
+}
+.input-label{
+  color: @fontGreyDeep;
+  width: 8rem;
+  display: inline-block;
+}
+.has-label-input{
+  width: 100%;
+  margin-left: -9rem;
+  display: inline-block;
+}
+.has-label-input-wrap{
+  margin-left: 9rem;
 }
 /* 提示信息样式  */
 .tips-error{
@@ -355,3 +390,10 @@ nav{height: 5rem; line-height: 5rem; background-color: @headbg; text-align: cent
 .backgroundsise-cover{
   background-size: cover!important;
 }
+.container{
+  width: 95%;
+  margin: 0 auto;
+}
+
+
+
