--- a/weixinApp/present/css/home.css
+++ b/weixinApp/present/css/home.css
@@ -153,15 +153,9 @@
   margin: 0 auto 1rem auto;
   border-bottom: 0.2rem solid #cccccc;
 }
-.news-block .news-list-img {
-  background-size: cover;
-  height: 15rem;
-}
 .news-block .title {
   font-size: 1.6rem;
-  margin: 1rem;
-  height: 3.8rem;
-  overflow: hidden;
+  padding: 1rem;
 }
 .news-block img {
   width: 100%;
@@ -169,9 +163,7 @@
 .news-block .detail {
   font-size: 1.2rem;
   line-height: 1.6rem;
-  margin: 0 1rem 1rem 1rem;
-  height: 6rem;
-  overflow: hidden;
+  padding: 0 1rem 1rem 1rem;
 }
 .news-block .label .data {
   padding-left: 1rem;
@@ -195,50 +187,16 @@
   margin: 1rem auto 1rem auto;
 }
 .news-detail .news-content p {
-  line-height: 2rem!important;
-  text-indent: 2em!important;
-  background-color: #f3f3f3 !important;
+  line-height: 2rem;
+  text-indent: 2em;
 }
 .news-detail .news-content img {
   margin: 1.5rem auto 1rem auto;
   display: block;
-  width: 100%;
 }
 .news-detail .news-content .img-detail {
   text-align: center;
+  margin-bottom: 1rem;
   font-size: 1rem;
   color: #999999;
-}
-.cant-find {
-  background-color: #000000;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-}
-.cant-find .block {
-  position: absolute;
-  width: 30rem;
-  height: 6rem;
-  bottom: 28rem;
-  border-bottom-right-radius: 0.416666rem;
-  border-top-right-radius: 0.416666rem;
-  background-color: #ffffff;
-}
-.cant-find .block img {
-  width: 100%;
-  vertical-align: middle;
-  margin-bottom: 0.8rem;
-}
-.cant-find .title {
-  color: #ffffff;
-  font-size: 3rem;
-  margin-left: 3rem;
-  margin-top: 7rem;
-  position: absolute;
-  bottom: 35rem;
-}
-.cant-find img {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
 }
