--- a/weixinApp/present/css/layout.less
+++ b/weixinApp/present/css/layout.less
@@ -96,8 +96,8 @@
   }
 }
 
-/* awardOne*/
-.award-one{
+/* 品酒教学*/
+.teach{
   .title{
     font-size: 2rem;
     padding-top: 2rem;
@@ -214,5 +214,17 @@
     img{
       width: 6rem;
     }
+  }
+}
+
+/* 开奖页面*/
+.award{
+  img{
+    width: 100%;
+  }
+  .detail{
+    text-align: center;
+    margin-top: 2rem;
+    line-height: 2rem;
   }
 }
