--- a/weixinApp/present/css/layout.less
+++ b/weixinApp/present/css/layout.less
@@ -228,3 +228,14 @@
     line-height: 2rem;
   }
 }
+
+.result{
+  text-align: center;
+  img{
+    width: 80%;
+    margin-bottom: 2rem;
+  }
+  .detail{
+    margin-bottom: 4rem;
+  }
+}
