--- a/weixinsite/css/base.css
+++ b/weixinsite/css/base.css
@@ -405,10 +405,10 @@ nav {
   color: #cccccc;
 }
 .bg-gradients-bottom {
-  background: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(#000000));
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(rgba(0, 0, 0, 0.3)));
 }
 .bg-gradients-top {
-  background: -webkit-gradient(linear, 0 0, 0 100%, from(#000000), to(transparent));
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, 0.3)), to(transparent));
 }
 .m-underline-d0d0d0 {
   border-bottom: 0.1rem solid #d0d0d0;
