--- a/weixinsite/css/base.less
+++ b/weixinsite/css/base.less
@@ -302,10 +302,10 @@ nav{height: 5rem; line-height: 5rem; background-color: @headbg; text-align: cent
   color: @cccGrey;
 }
 .bg-gradients-bottom{
-  background: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(@black));
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(rgba(0,0,0,0.3)));
 }
 .bg-gradients-top{
-  background: -webkit-gradient(linear, 0 0, 0 100%, from(@black), to(transparent));
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0,0,0,0.3)), to(transparent));
 }
 .m-underline-d0d0d0{
   border-bottom: 0.1rem solid #d0d0d0;
