--- a/weixinsite/css/m-cart.less
+++ b/weixinsite/css/m-cart.less
@@ -544,3 +544,26 @@
     }
   }
 }
+/*帮助页面*/
+.help{
+  .title{
+    font-size: 2rem;
+    text-align: center;
+    color: @red;
+    margin-bottom: 2rem;
+    font-weight: bold;
+    margin-top: 4rem;
+  }
+  .detail{
+    li{
+      a{
+        color: @link;
+      }
+      line-height: 2rem;
+      &:first-child{
+        font-size: 1.6rem;
+        margin-bottom: 0.6rem;
+      }
+    }
+  }
+}
