--- a/newGuo/cart/styles/cart.css
+++ b/newGuo/cart/styles/cart.css
@@ -408,9 +408,9 @@ h2.order-title {
 }
 .good-information1{
     background: url("../../zhongguodao/images/6_01.jpg") no-repeat bottom #000;
-    height: 975px;
+    height: 915px;
     position: relative;
-    width: 100%;
+    background-size: 100%;
 }
 .good-information2{
     background: url("../../zhongguodao/images/6_02.jpg") no-repeat center #000;
@@ -572,7 +572,7 @@ h2.order-title {
 .good-information9-content{
     width: 960px;
     margin: 0 auto;
-    padding-top: 300px;
+    padding-top: 100px;
     text-align: center;
 }
 .good-information9-content p{
@@ -593,7 +593,7 @@ h2.order-title {
     background-color: #333;
     width: 100%;
     margin: 0 auto;
-    height: 1197px;
+    height: 898px;
     position: relative;
 }
 .zhongguodao-banner-1 {
@@ -718,7 +718,7 @@ h2.order-title {
 .tabb-seven-bg-1{
     background: url("../../zhongguodao/images/caikai_01.jpg") center top no-repeat;
     width: 100%;
-    height: 1170px;
+    height: 586px;
     margin: 0 auto;
 }
 
@@ -741,6 +741,20 @@ h2.order-title {
     height: 783px;
     margin: 0 auto;
     margin-top: 20px;
+}
+.tabb-seven-bg-5{
+    background: url("../../zhongguodao/images/caikai_05.jpg") center top no-repeat;
+    width: 100%;
+    height: 332px;
+    margin: 0 auto;
+    margin-top: 80px;
+}
+.tabb-seven-bg-6{
+    background: url("../../zhongguodao/images/caikai_06.jpg") center top no-repeat;
+    width: 100%;
+    height: 679px;
+    margin: 0 auto;
+    margin-bottom: 80px;
 }
 .tabb-six-bg-1{
     background: url("../../zhongguodao/images/shoucan_01.jpg") center top no-repeat;
@@ -898,6 +912,84 @@ h2.order-title {
     height: 845px;
     margin: 0 auto;
 }
+@media (max-width: 1440px) {
+    .zhongguodao-banner-1 {
+        background: url("../../zhongguodao/images/6_08.jpg") center top no-repeat;
+        width: 1440px;
+        height: 898px;
+        background-size: 1440px 898px;
+        position: relative;
+        cursor: pointer;
+        margin: 0 auto;
+    }
+    .zhongguodao-banner-2{
+        background: url("../../zhongguodao/images/6_08_02.jpg") center top no-repeat;
+        width: 1440px;
+        height: 898px;
+        background-size: 1440px 898px;
+        position: relative;
+        cursor: pointer;
+        margin: 0 auto;
+    }
+    .zhongguodao-banner-3{
+        background: url("../../zhongguodao/images/6_08_03.jpg") center top no-repeat;
+        width: 1440px;
+        height: 898px;
+        background-size: 1440px 898px;
+        position: relative;
+        cursor: pointer;
+        margin: 0 auto;
+    }
+    .good-information3 {
+        background: url("../../zhongguodao/images/6_03.jpg") no-repeat center #000;
+        background-size: 1440px 801px;
+        height: 801px;
+        position: relative;
+    }
+    .good-information4 {
+        background: url("../../zhongguodao/images/6_04.jpg") no-repeat center #000;
+        height: 595px;
+        background-size: 1440px 595px;
+        position: relative;
+    }
+    .good-information5 {
+        background: url("../../zhongguodao/images/6_05.jpg") no-repeat center #000;
+        background-size: 1440px 926px;
+        height: 926px;
+        position: relative;
+    }
+    .good-information6 {
+        background: url("../../zhongguodao/images/6_06.jpg") no-repeat center #000;
+        height: 680px;
+        background-size: 1440px 680px;
+        position: relative;
+    }
+    .good-information7 {
+        background: url("../../zhongguodao/images/6_07.jpg") no-repeat center #000;
+        height: 947px;
+        background-size: 1440px 947px;
+        position: relative;
+    }
+    .good-information9 {
+        background: url("../../zhongguodao/images/6_09.jpg") no-repeat center #000;
+        height: 767px;
+        background-size: 1440px 767px;
+        position: relative;
+    }
+    .purchase-img{
+        margin-right: -110px!important;
+        margin-left: 193px!important;
+    }
+    .purchase-img img{
+        width: 260px;
+    }
+    .good-information9-content{
+        padding-top: 100px;
+    }
+    .good-information3-content > div:first-child{
+        padding-top: 40px!important;
+    }
+}
 .mlgbd{
     margin-left: 513px;
 }
@@ -987,27 +1079,7 @@ h2.order-title {
         height: 798px;
         position: relative;
     }
-    .zhongguodao-banner-1 {
-        background: url("../../zhongguodao/images/made_01.jpg") center top no-repeat;
-        width: 1280px;
-        height: 798px;
-        position: relative;
-        cursor: pointer;
-    }
-    .zhongguodao-banner-2{
-        background: url("../../zhongguodao/images/made_02.jpg") center top no-repeat;
-        width: 1280px;
-        height: 798px;
-        position: relative;
-        cursor: pointer;
-    }
-    .zhongguodao-banner-3{
-        background: url("../../zhongguodao/images/made_03.jpg") center top no-repeat;
-        width: 1280px;
-        height: 798px;
-        position: relative;
-        cursor: pointer;
-    }
+
     .zhongguodao-left-right{
         width: 960px; position:absolute; margin: 0 auto; top: 50%;
         margin-top: -25px;
@@ -1081,4 +1153,44 @@ h2.order-title {
 }
 .container .choose-step .choose-content .step-content li .active:hover {
     background-color: #fff;
+}
+
+/*联系我们*/
+.img-list{
+    margin-top: 10px;
+}
+.img-list img{
+    width: 100%;
+}
+.img-detail{
+    width: 46%;
+    margin-right: 2%;
+    float: left;
+}
+.img-detail p{
+    margin-top: 5px;
+}
+
+.purchase-img{
+    float: left;
+    margin-right: 77px;
+    margin-left: 32px;
+}
+
+/*
+两瓶装*/
+.zgd2-2{
+    position: relative;
+}
+.center-area{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -60px;
+    text-align: center;
+}
+@media (max-width: 1440px) {
+    .center-area img{
+        width: 383px;
+    }
 }
