--- a/newGuo/global/styles/layout.css
+++ b/newGuo/global/styles/layout.css
@@ -21,7 +21,7 @@ ul{list-style: none;}
     left: 0;
 }
 .index-purchase-button{
-    line-height:45px; width: 200px; height: 45px;
+    line-height:45px; width: 158px; height: 45px;
 }
 
 .button-disable{
@@ -29,8 +29,8 @@ ul{list-style: none;}
 }
 .purchase-button-position{
     position: absolute;
-    right: 307px;
-    bottom: 49px;
+    right: 357px;
+    bottom: 80px;
 }
 #billboard{
     background-color: #333;
@@ -135,13 +135,14 @@ ul{list-style: none;}
     cursor: pointer;
     position: relative;
     background: url("../../images/index_01.jpg") center top no-repeat;
+    background-size: 570px 430px;
 }
 .model-one-left .detail{
     width: 200px;
     height: 115px;
     position: absolute;
     left: 0;
-    bottom: 90px;
+    top: 38px;
     color: #fff;
     padding-top:15px;
     padding-left:30px;
@@ -170,6 +171,7 @@ ul{list-style: none;}
     float: left;
     position: relative;
     background: url("../../images/index_02.jpg") center top no-repeat;
+    background-size: 280px 210px;
 }
 .model-little-two{
     width: 280px;
@@ -178,6 +180,7 @@ ul{list-style: none;}
     float: left;
     position: relative;
     background: url("../../images/index_03.jpg") center top no-repeat;
+    background-size: 280px 210px;
 }
 .model-little-three{
     width: 280px;
@@ -186,6 +189,7 @@ ul{list-style: none;}
     margin-top: 10px;
     position: relative;
     background: url("../../images/index_04.jpg") center top no-repeat;
+    background-size: 280px 210px;
 }
 .model-little-four{
     width: 280px;
@@ -195,6 +199,7 @@ ul{list-style: none;}
     margin-top: 10px;
     position: relative;
     background: url("../../images/index_05.jpg") center top no-repeat;
+    background-size: 280px 210px;
 }
 .model-bottom{
     width: 100%;
@@ -383,12 +388,14 @@ ul{list-style: none;}
     font-size: 24px;
     margin-bottom: 12px;
     display: block!important;
-    color: #9c9c9c;
+    -webkit-transition-duration: 0.3s;-moz-transition-duration: 0.3s;-ms-transition-duration: 0.3s;-o-transition-duration: 0.3s;transition-duration: 0.3s;
+    color: #c33829;
 }
 .footer-hover-img{
     height: 25px;
     width: 25px;
     margin-bottom: 7px;
+    -webkit-transition-duration: 0.3s;-moz-transition-duration: 0.3s;-ms-transition-duration: 0.3s;-o-transition-duration: 0.3s;transition-duration: 0.3s;
 }
 .login-background{
     background: url("../../images/login-bg.jpg") center top no-repeat;
@@ -447,9 +454,9 @@ button{
     line-height: 45px;
     background-color: #ccc;
     color: #333;
-    *+width:108px;
+*+width:108px;
 
-}
+    }
 .btn-valite-position{
     position: absolute;
     right: 0;
@@ -470,9 +477,9 @@ and (max-device-width : 1024px) {
         right: 0px;
         top: 0;
         color: #333;
-        *+width:108px;
+    *+width:108px;
 }
-}
+    }
 .btn-valite:hover,.btn-valite:focus{
     background-color: #f8f8f8;
     border:none;
@@ -490,7 +497,7 @@ and (max-device-width : 1024px) {
     width: 230px;
 }
 .login-form-find{
-   width: 230px;
+    width: 230px;
     margin: 0 auto;
 }
 .left-nav{
@@ -633,7 +640,7 @@ and (max-device-width : 1024px) {
     overflow: hidden;
 }
 .news-right-detail h3{
-   margin-top: 0;
+    margin-top: 0;
 }
 .news-left ul li{
     padding-bottom: 35px;
@@ -653,6 +660,7 @@ and (max-device-width : 1024px) {
     text-align: center;
     font-size: 13px;
     cursor: pointer;
+    background-color: #f8f8f8;
 }
 .left-img img{
     margin-top: 15px;
@@ -676,8 +684,8 @@ and (max-device-width : 1024px) {
     border-top: none;
 }
 .right-list-detail{
-   font-size: 16px;
-   line-height: 18px;
+    font-size: 16px;
+    line-height: 18px;
 }
 .latest-paper{
     font-size: 13px;
@@ -741,6 +749,7 @@ and (max-device-width : 1024px) {
         width: 470px;
         height: 355px;
         position: relative;
+        background-size: 470px 355px;
     }
     .model-one-right{
         float: left;
@@ -753,6 +762,7 @@ and (max-device-width : 1024px) {
         height: 173px;
         float: left;
         position: relative;
+        background-size: 230px 173px;
     }
     .model-little-two{
         width: 230px;
@@ -760,6 +770,7 @@ and (max-device-width : 1024px) {
         margin-left: 10px;
         float: left;
         position: relative;
+        background-size: 230px 173px;
     }
     .model-little-three{
         width: 230px;
@@ -767,6 +778,7 @@ and (max-device-width : 1024px) {
         float: left;
         margin-top: 9px;
         position: relative;
+        background-size: 230px 173px;
     }
     .model-little-four{
         width: 230px;
@@ -775,6 +787,7 @@ and (max-device-width : 1024px) {
         float: left;
         margin-top: 9px;
         position: relative;
+        background-size: 230px 173px;
     }
     .model-two>div{
         width: 230px;
@@ -807,13 +820,13 @@ and (max-device-width : 1024px) {
 
     .index-purchase-button{
         line-height: 38px;
-        width: 155px;
+        width: 125px;
         height: 38px;
     }
     .purchase-button-position{
         position: absolute;
-        right: 245px;
-        bottom: 42px;
+        right: 282px;
+        bottom: 61px;
     }
     #billboard {
         background-color: #333;
@@ -840,4 +853,288 @@ and (max-device-width : 1024px) {
         width: 310px;
         padding-left: 10px;
     }
+}
+
+
+.picture-area{
+    background-color: #333;
+}
+.picture-area a{
+    width: 20%;
+    margin-left: 0;
+    float: left;
+    position: relative;
+    -webkit-transition: 0.6s;-moz-transition: 0.6s;-ms-transition: 0.6s;-o-transition: 0.6s;transition: 0.6s;
+}
+.picture-area a img{
+    width: 100%;
+}
+.picture-cover {
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.7);
+    text-align: center;
+}
+.picture-cover span{
+    font-size: 18px;
+    margin-top: 20%;
+    display: inline-block;
+    width: 80%;
+    color: #fff;
+}
+
+/*首页用户评价模块*/
+.band-story{
+    background-color: #333;
+    position: relative;
+    height: 370px;
+}
+.feature-list{
+    position: absolute;
+    left: 579px;
+    z-index: 99;
+    top: 0;
+    height: 370px;
+    width: 120px;
+    text-align: center;
+    background-color: #3b3b3b;
+}
+.feature-list li{
+    padding-top: 17px;
+}
+.feature-list .item-one img,.feature-list .item-two img,.feature-list .item-three img,.feature-list .item-four img{
+    width: 86px;
+    height: 52px;
+    box-shadow: 2px 2px 5px #000;
+    -webkit-box-shadow: 2px 2px 5px #000;
+    -moz-box-shadow: 2px 2px 5px #000;
+    -o-box-shadow: 2px 2px 5px #000;
+}
+.feature-list li.hover-selected img{
+    opacity: 0.5;
+}
+.feature-content{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    display: none;
+}
+.feature-content img{
+    width: 546px;
+    height: 330px;
+    margin-top: 18px;
+    margin-left: 17px;
+}
+.feature-content .detail{
+    position: absolute;
+    right: 33px;
+    top: 0;
+    width: 391px;
+    color: #fff;
+    height: 300px;
+}
+.feature-content .detail p{
+    overflow: hidden;
+    height: 130px;
+    line-height: 24px;
+    font-size: 13px;
+    text-align: center;
+}
+.feature-content .detail h3{
+    margin-top: 31px;
+    overflow: hidden;
+    white-space: nowrap;
+    margin-bottom: 6px;
+    text-align: center;
+    font-weight: normal;
+    font-size: 26px;
+    font-family: "宋体";
+}
+.feature-content .detail h4{
+    overflow: hidden;
+    white-space: nowrap;
+    margin-top: 0;
+    text-align: center;
+    font-weight: normal;
+    font-size: 18px;
+    font-family: "宋体";
+}
+.short-white-border{
+    height: 2px;
+    width: 40px;
+    background-color: #fff;
+    margin: -5px auto 15px auto;
+}
+
+/*暂时不用*/
+.band-story-user{
+    height: 114px;
+    background-color: #f8f8f8;
+}
+.band-story-user .content{
+    width: 25%;
+    float: left;
+}
+.band-story-user .content .left {
+    float: left;
+}
+.band-story-user .content .left img{
+    width: 60px;
+    height: 60px;
+    margin-left: 20px;
+    margin-top: 23px;
+    border: 1px solid #eee;
+    padding: 5px;
+}
+.band-story-user .content .right {
+    float: left;
+    margin-top: 25px;
+    margin-left: 15px;
+    width: 52%;
+    overflow: hidden;
+}
+.band-story-user .content .right .grey{
+    font-size: 12px;
+    color: #999;
+}
+.band-story-user .content .right .title{
+    font-size: 14px;
+    height: 41px;
+    overflow: hidden;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+/*暂时不用*/
+
+@media (max-width: 1260px) {
+    .feature-content .detail{
+        width: 200px;
+    }
+    .picture-area a{
+        width: 25%;
+    }
+}
+
+/*国馆大讲堂*/
+.lecture-banner{
+   background-color: #333;
+}
+.lecture-banner .container img{
+    width: 100%;
+}
+.lecture-tab-left{
+    float: left;
+    width: 63.565217%;
+    border-right: 1px solid #f8f8f8;
+}
+.lecture-tab-left ul{
+    margin-right: 5.173913%;
+    -webkit-transition: 0.6s;-moz-transition: 0.6s;-ms-transition: 0.6s;-o-transition: 0.6s;transition: 0.6s;
+}
+.lecture-tab-left ul li{
+    border-top: 1px solid #f8f8f8;
+}
+.lecture-tab-left ul li a img{
+    width: 100%;
+}
+.lecture-tab-left ul li:first-child{
+    border-top: none;
+}
+.lecture-tab-right{
+    float: left;
+    width: 33.6%;
+    margin-left: 2.608695%;
+}
+.lecture-tab-left ul li:first-child .lecture-title{
+    margin-top: -3px;
+}
+.lecture-title{
+    margin: 0;
+    margin-top: 24px;
+    font-weight: bold!important;
+    font-size: 20px;
+}
+.lecture-time{
+    margin-top: 10px;
+}
+.lecture-img{
+    width: 100%;
+}
+.lecture-content{
+    line-height: 22px;
+    height: 85px;
+    overflow: hidden;
+}
+.read-prime{
+    color: #a84200;
+    float: right;
+    margin-bottom: 38px;
+}
+.column-title{
+    font:20px/1.1 "Microsoft Yahei","Hiragino Sans GB",sans-serif!important;
+    color: #333;
+    margin-top: 24px;
+}
+.lecture-tab-right ul li:first-child .column-title{
+    margin-top: 0;
+}
+.column-content{
+    color: #565656;
+    line-height: 22px;
+}
+.column-content-little{
+    margin-top: -4px;
+    color: #565656;
+    line-height: 22px;
+}
+.lecture-tab-right ul li{
+    border-top: 1px solid #f8f8f8;
+    margin-bottom: 30px;
+}
+.lecture-tab-right ul li:first-child{
+    border-top: none;
+}
+.column-img-text{
+    margin-top: 24px;
+}
+.column-img-text .left{
+    width: 40%;
+    float: left;
+}
+.column-img-text .left img{
+    width: 93%;
+}
+.column-img-text .right{
+    width: 60%;
+    float: left;
+}
+.img-text-group{
+    margin-bottom: 30px;
+}
+.column-third p{
+    color: #565656;
+    line-height: 22px;
+}
+.column-third p a {
+    text-decoration: underline;
+    color: #001eff;
+}
+
+.lecture-brief{
+    margin-top: 30px;
+}
+.lecture-brief .lecture-tab-left{
+    width: 61%;
+    padding-right: 5.173913%;
+}
+.lecture-brief .lecture-tab-right{
+    width: 28%;
+}
+.lecture-tab-right .right-list ul li{
+    margin-bottom: 0;
 }
