--- a/newGuo/cart/styles/cart.css
+++ b/newGuo/cart/styles/cart.css
@@ -1228,6 +1228,7 @@ h2.order-title {
     margin-left: -41%;
     width: 82%;
 }
+
 @media (max-width: 1440px) {
     .center-area img{
         width: 350px;
@@ -1239,4 +1240,91 @@ h2.order-title {
         width: 190px!important;
         margin-top: 8px;
     }
+}
+
+/*招商*/
+.mc-top{
+    background-color: #000;
+    text-align: center;
+}
+.mc-top img{
+}
+.mc-middle h1{
+    text-align: center;
+    font-size: 36px;
+    font-weight: normal;
+    color: #a38a77;
+    margin-top: 65px;
+    margin-bottom: 35px;
+}
+.mc-content{
+    text-align: center;
+    font-size: 18px;
+    line-height: 33px;
+}
+.mc-img{
+    width: 80%;
+    margin: 40px auto 0 auto;
+    text-align: center;
+}
+.mc-img>div{
+    width: 24%;
+    margin-right: 1%;
+    float: left;
+}
+.mc-img>div img{
+    width: 100%;
+}
+.mc-content-two>div{
+    float: right;
+    width: 48%;
+}
+.mc-content-two>div:first-child{
+    float: left;
+    width: 36%;
+    margin-left: 10%;
+}
+.mc-content-two h3{
+    font-size: 24px;
+    color: #a38a77;
+    font-weight: normal;
+}
+.mc-content-two p{
+    font-size: 18px;
+    line-height: 33px;
+}
+.mc-bottom-one{
+    position: relative;
+    margin-top: 20px;
+}
+.mc-bottom-one img{
+    width: 100%;
+}
+.mc-bottom-two{
+    background-color: #c69c6d;
+    height: 114px;
+}
+.mc-contact{
+    font-size: 22px;
+    color: #fff;
+    text-align: center;
+    margin-top: 0;
+    padding-top: 20px;
+    line-height: 36px;
+}
+.mc-bottom-content{
+    width: 650px;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    margin-left: -300px;
+    top: 0;
+    height: 500px;
+    background: url("../../images/merchants/1_01.png") center top no-repeat ;
+}
+.mc-bottom-content h1{
+    font-size: 36px;
+    font-weight: normal;
+    color: #a38a77;
+    margin-top: 96px;
 }
