--- a/newGuo/global/styles/layout.css
+++ b/newGuo/global/styles/layout.css
@@ -1108,6 +1108,7 @@ and (max-device-width : 1024px) {
 }
 .column-img-text .left img{
     width: 93%;
+    border: 1px solid #d0d0d0;
 }
 .column-img-text .right{
     width: 60%;
